--- a/base_boxed_basic_2column_query.html
+++ b/base_boxed_basic_2column_query.html
@@ -309,6 +309,7 @@
 				max-width:640px;
 				box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.5);
 				z-index: 50;
+				display: block;
 			}
 			#headerTitel {
 				display: block;
@@ -437,7 +438,7 @@
 			}
 
 			.leftColumnContent img, .rightColumnContent img{
-				display:inline;
+				display: block;
 				height:auto;
 				max-width:274px;
 			}
@@ -539,7 +540,7 @@
 				* @tip Make the template fluid for portrait or landscape view adaptability. If a fluid layout doesn't work for you, set the width to 300px instead.
 				*/
 				#templateContainer{
-					max-width:640px !important;
+					max-width: 480px !important;
 					width:100% !important;
 				}
 
