--- a/base_boxed_basic_2column_query.html
+++ b/base_boxed_basic_2column_query.html
@@ -324,12 +324,14 @@
 			.templateColumnContainer{
 				display: inline;
 				background-color: #FFFFFF;
+				box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
 				
 			}
 
 			.templateColumnContainerLeft{
 				display: inline;
 				background-color: #FFFFFF;
+				box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
 				
 			}
 
